# RasPico

./: .gitignore
ProyectBase/: CMakeLists.txt  main.cpp
StepMotors/: CMakeLists.txt  main.cpp  steps.pio
Wifi/: CMakeLists.txt  main.cpp
ntp/: CMakeLists.txt  lwipopts.h  main.cpp
